--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
+
+DB_CONNECTION=sqlite
+DB_DATABASE=database.sqlite
+
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
