--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "react-addons-css-transition-group": "^15.3.2"
   }
 }
